<resources>
    <string name="app_name">Protenium</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="meals">Meals</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_to_receive_a_n_link_to_create_a_new_password_via_email">Please enter your email to receive a \n link to create a new password via email</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="skip">Skip</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select">Select</string>
    <string name="title_nill" />
    <string name="tvCategory">Weight Loss</string>
    <string name="tvCategoryItemTitle1">Three Meal Per Day</string>
    <string name="tvCategoryItems">3 Meals, 2 Snacks, 1 Salad</string>
    <string name="tvMyProfile">My Profile</string>
    <string name="tvDislike">Dislikes</string>
    <string name="tvSubscriptionHistory">Subscription History</string>
    <string name="tvSettings">Settings</string>
    <string name="tvLogout">Log Out</string>
    <string name="tvAboutUs">About Us</string>
    <string name="tvContactUs">Contact Us</string>
    <string name="tvPrivacyPolicy">Privacy Policy</string>
    <string name="tvTermsAndConditions">Terms and Conditions</string>
    <string name="powered_by">Powered by</string>
    <string name="company_name">Blackonyx Solutions</string>
    <string name="total">Total:</string>
    <string name="kwd_5000_00">KWD 0.000</string>
    <string name="proceed_to_pay">Proceed</string>
    <string name="description">Description</string>
    <string name="off_days">OFF DAYS :</string>
    <string name="read_more">Read More</string>
    <string name="kwd_256_00">KWD 0.000</string>
    <string name="select_plan_duration">Select Plan Duration</string>
    <string name="select_start_date">Select subscription start date</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ornare_leo_non_mollis_id_cursus_eu_euismod_faucibus_in_leo_malesuada_ornare_leo_non_mollis_id_cursus_eu_euismod_faucibus_in_leo_ornare_leo_non_mollis_id_cursus_eu_euismod_faucibus_in_leo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ornare leo non mollis id cursus. Eu euismod faucibus in leo malesuada Ornare leo non mollis id cursus. Eu euismod faucibus in leo Ornare leo non mollis id cursus. Eu euismod faucibus in leo</string>
    <string name="proteins">Proteins</string>
    <string name="left_open">(</string>
    <string name="kwd_1505_00">KWD 1505.00</string>
    <string name="right_open">)</string>
    <string name="minus">-</string>
    <string name="_50g">50g</string>
    <string name="carbs">Carbs</string>
    <string name="non_stop">Non Stop</string>
    <string name="los">us in lemal Ornare leo non mollis id cursus. Eu euismod faucibus in leo Ornare leo non mollis id cursus. Eu euismod faucibus in leo</string>
    <string name="your_dislikes">Your Dislikes</string>
    <string name="dislike">Dislike</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="text">Enter Additional Notes</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="content_for_non_stop">Selecting this option will enable food delivery on weekends</string>
    <string name="content_dislike">Select your dislikes to help us deliver food of your choice</string>
    <string name="extras">Extras</string>
    <string name="kwd">KWD\u0020</string>
    <string name="_0">0</string>
    <string name="ok">Ok</string>
    <string name="tvSelectADate">Select Start Date</string>
    <string name="chosen_meals">Chosen Meals</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="kuwait_towers">Kuwait Towers</string>
    <string name="address">Address :</string>
    <string name="dasman_arabian_gulf_street">Dasman, Arabian Gulf Street,</string>
    <string name="kuwait_city">Kuwait City,</string>
    <string name="telephone">Telephone:</string>
    <string name="_96522444119">+96522444119</string>
    <string name="payment_method">Payment Method</string>
    <string name="renew">Renew</string>
    <string name="tvSubscriptionpreview">Subscription Details</string>
    <string name="tvpush_notification">Push Notification</string>
    <string name="save">Save</string>
    <string name="select_address">Select Address</string>
    <string name="add_address">Add Address +</string>
    <string name="plan_summary">Plan Summary</string>
    <string name="_653_nostrand_ave_brooklyn_ny_11216">653 Nostrand Ave., Brooklyn, NY 11216</string>
    <string name="duration">Duration</string>
    <string name="_2_weeks">0 Weeks</string>
    <string name="_2_meals_day">2 Meals / Day</string>
    <string name="kwd_5245_00">KWD 5245.00</string>
    <string name="carbs_50g">Carbs 50g</string>
    <string name="protein_100g">Protein</string>
    <string name="none_stop">Non Stop</string>
    <string name="kwd_599_00">KWD 599.00</string>
    <string name="sub_total">Sub Total</string>
    <string name="kwd_7500_00">KWD 7500.00</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="coupon_hint">Eg:OFF10</string>
    <string name="grand_total">Grand Total</string>
    <string name="make_payment">Pay</string>
    <string name="governorate">Governorate</string>
    <string name="area">Area</string>
    <string name="avenue">Avenue</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="building">Building/House</string>
    <string name="floor">Floor</string>
    <string name="appartment">Apartment</string>
    <string name="add_delivery_address">Add Delivery Address</string>
    <string name="checkout">Checkout</string>
    <string name="switchMaterial">Set address as default</string>
    <string name="tvsubmit">Submit</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out</string>
    <string name="cancel">Cancel</string>
    <string name="tvChangePassword">Change Password</string>
    <string name="change_password">Change password</string>
    <string name="tvNewPassword">New Password</string>
    <string name="tvconfirmPassword">Confirm Password</string>
    <string name="select_language">Select Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="app_version">App Version</string>
    <string name="_1_02_01">1.02.01</string>
    <string name="about_company">About Company</string>
    <string name="your_name">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="tvMessage">Message</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="contact_us_in_whatsapp">Contact us in Whatsapp</string>
    <string name="subscription_history">Subscription History</string>
    <string name="completed">Completed</string>
    <string name="weight_loss_2_meals_day">Weight Loss - 2 meals/day</string>
    <string name="view_details">View Details</string>
    <string name="no_subscription_history">No subscription history</string>
    <string name="thank_you">Thank you</string>
    <string name="for_subscribing">for subscribing</string>
    <string name="_45755448">5454</string>
    <string name="payment_id">Payment Id</string>
    <string name="transaction_id">Transaction id</string>
    <string name="_444454655465654">#444454655465654</string>
    <string name="tvselectmeal">Select Meal</string>
    <string name="start_date_one">Start Date</string>
    <string name="end_date_one">End Date</string>
    <string name="_31_03_2021">01/01/2022</string>
    <string name="_31_12_2022">31/12/2022</string>
    <string name="tap_on_a_day_to_choose_your_meals">Tap on a day to choose your meals</string>
    <string name="resume">Resume</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="choose_meals">Choose Meal</string>
    <string name="pause">Pause</string>
    <string name="successfully_delivered">Successfully Delivered</string>
    <string name="tvEditProfileText">Edit Profile</string>
    <string name="etProfileName">Name</string>
    <string name="etProfileEmail">Email</string>
    <string name="etProfileMobile">Mobile Number</string>
    <string name="spGender">Gender</string>
    <string name="tvAlternativeNumber">Alternative Number</string>
    <string name="select_lang">Select Language</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alternative_number">Alternative Number</string>
    <string name="agree_terms_and_condition">Agree Terms and condition</string>
    <string name="start_meals">Start meals</string>
    <string name="meals_selection">Meals Selection</string>
    <string name="selected_meal">Selected Meal</string>
    <string name="low_carb">Low Carb</string>
    <string name="classic_ceasar_salad">Classic Ceasar Salad</string>
    <string name="_4_5">4.5</string>
    <string name="ingredients_and_macros">Ingredients And Macros</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur">lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="subscription_preview">SUBSCRIPTION DETAILS</string>
    <string name="fullcollen">:</string>
    <string name="status">Status</string>
    <string name="duration1">Duration:</string>
    <string name="non_stop1">Non Stop:</string>
    <string name="yes">yes</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
    <string name="canceled">Canceled</string>
    <string name="edit_meals">Edit meals</string>


</resources>