<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rounded_top_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_weight="1"
                android:fontFamily="@font/segoe_ui_semibold"
                android:gravity="start"
                android:text="@string/select_language"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_16sp" />

            <ImageView
                android:id="@+id/ivCloseSelectlanguage"
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:padding="@dimen/margin_5dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:background="@color/color_accent_grey_light_new2" />


        <RadioGroup
            android:id="@+id/SelectGenderRadioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:layoutDirection="rtl">

            <RadioButton
                android:id="@+id/SelectArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/arabic"
                android:textSize="@dimen/text_size_16sp" />

            <RadioButton
                android:id="@+id/SelectEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/english"
                android:textSize="@dimen/text_size_16sp" />


        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SelectLanguageBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="center"
            android:text="@string/select"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:cornerRadius="@dimen/margin_24dp"
            app:strokeColor="@color/black" />


    </LinearLayout>

</LinearLayout>