<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_rounded_top_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_20dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:layout_weight="1"
                android:fontFamily="@font/segoe_ui_bold"
                android:gravity="start"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16sp" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/margin_30dp"
                android:layout_height="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_20dp"
                android:padding="@dimen/margin_5dp"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:background="@color/color_accent_grey_light_new2" />


        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/tvNewPassword"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50dp"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/tvconfirmPassword"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/light_black"
            android:textSize="@dimen/text_size_14sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_60dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_15dp"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:fontFamily="@font/segoe_ui_semibold"
            android:gravity="center"
            android:text="@string/tvsubmit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp"
            app:cornerRadius="@dimen/margin_24dp"
            app:strokeColor="@color/black" />


    </LinearLayout>

</LinearLayout>