<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/linearMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSub"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:contentInsetStart="0dp"
                android:contentInsetEnd="0dp"
                android:gravity="center_horizontal"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:id="@+id/tvSubToolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="My Account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_16sp" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/tvMyProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_40dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/margin_20dp"
                android:focusable="true"
                android:gravity="start"
                android:padding="@dimen/margin_5dp"
                android:text="@string/tvMyProfile"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_15sp"
                app:drawableEndCompat="@drawable/ic_silver_arrow_right"
                app:drawableStartCompat="@drawable/ic_account_user" />

            <TextView
                android:id="@+id/tvDislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/margin_20dp"
                android:focusable="true"
                android:gravity="start"
                android:padding="@dimen/margin_5dp"
                android:text="@string/tvDislike"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_15sp"
                app:drawableEndCompat="@drawable/ic_silver_arrow_right"
                app:drawableStartCompat="@drawable/ic_dislike_heart" />

            <TextView
                android:id="@+id/tvSubscriptionHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/margin_20dp"
                android:focusable="true"
                android:gravity="start"
                android:padding="@dimen/margin_5dp"
                android:text="@string/tvSubscriptionHistory"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_15sp"
                app:drawableEndCompat="@drawable/ic_silver_arrow_right"
                app:drawableStartCompat="@drawable/ic_subscriptions" />

            <TextView
                android:id="@+id/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/margin_20dp"
                android:focusable="true"
                android:gravity="start"
                android:padding="@dimen/margin_5dp"
                android:text="@string/tvSettings"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_15sp"
                app:drawableEndCompat="@drawable/ic_silver_arrow_right"
                app:drawableStartCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_25dp"
                android:layout_marginTop="@dimen/margin_30dp"
                android:layout_marginEnd="@dimen/margin_25dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="@dimen/margin_20dp"
                android:focusable="true"
                android:gravity="start"
                android:padding="@dimen/margin_5dp"
                android:text="@string/tvLogout"
                android:textColor="@color/light_black1"
                android:textSize="@dimen/text_size_15sp"
                app:drawableEndCompat="@drawable/ic_silver_arrow_right"
                app:drawableStartCompat="@drawable/ic_logout" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>